--- a/hana/package.json
+++ b/hana/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "hana",
+  "name": "Omnium",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -10,6 +10,7 @@
   "dependencies": {
     "@vuelidate/core": "^2.0.0",
     "@vuelidate/validators": "^2.0.0",
+    "animate.css": "^4.1.1",
     "axios": "^1.3.2",
     "core-js": "^3.8.3",
     "firebase": "^9.17.1",
